--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -3,7 +3,7 @@ ca:
     share: "Comparteix"
     my connections: "Comptes connectats"
     connected as: "Estàs connectat/ada a %{connection} com %{username}."
-    remove connection: "Elimina aquesta connexió"
+    remove connection: "Elimina"
     connection friends: "Aquí hi ha varis usuaris amb qui tens relació a %{connection}:"
     errors:
       no friends: "Encara no apareix cap dels teus amics de %{connection} a YouVersion."
