--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -128,6 +128,7 @@ ta:
   chapter: "அதிகாரம்"
   bible: "வேதாகமம்"
   notes title: "குறிப்புகள்"
+  videos: "வீடியோக்கள்"
   friends: "நண்பர்கள்"
   groups: "குழுக்கள்"
   mobile: "மொபைல்"
