--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -588,7 +588,7 @@ ja:
     subhead: "世界中の人が聖書に簡単にアクセスできますように・・・"
     copy: "もしも世界中の全ての人に聖書を無料であげることができたら・・・と想像してみてください。YouVersion に寄付するとは、まさにそのことです。私たちは、携帯電話を持っていれば誰でも聖書にアクセスして、神様の愛に満ちた物語を読むことができるという、今までは夢のようであった時代に生きています。より多くの人に、もっと聖句を読んでもらうために、皆様からのご協力を必要としています。"
     amount: "寄付額"
-    option once: "1回"
+    option once: "この1回"
     option monthly: "毎月1回"
     alert empty amount: "寄付額を入力してください。"
     name: "お名前"
