--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -13,6 +13,8 @@ km:
       name: "Twitter"
     facebook:
       name: "ហ្វេសប៊ុក"
+      errors:
+        expired access: "ការ​ចូល​របស់​អ្នក​ត្រូវ​បាន​ហូស​កំណត់​ដោយ​ហ្វេសប៊ុក។ សូម​ផ្ដាច់​ការភ្ជាប់​របស់​លោក​អ្នក​ហើយ​ភ្ជាប់​ឡើង​វិញ​លើ​ហ្វេសប៊ុក"
   api:
     users agree bool: "លោក​អ្នក​ត្រូវ​យល់​ព្រម​ជាមួយនិតិវិធី និង​​លក្ខខ័ណ្ឌ​​​ដើម្បីបង្កើតគណនី។"
     users confirm password matches: "អក្សរសម្ងាត់មិនត្រឹមត្រូវទេ ។"
@@ -585,6 +587,10 @@ km:
     headline: "គ្រប់ៗ​គ្នា​ត្រូវ​ការ​ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់។"
     subhead: "ជួយ​មនុស្ស​ជុំ​វិញ​ពិភព​លោក​អោយ​មាន​ព្រះ​គម្ពីរ​នៅ​ចុង​ម្រាម​ដៃ​របស់​គេ។"
     copy: "សាក​ស្រមៃ​ទៅ​មើល ប្រសិន​បើ​លោកអ្នក​អាច​អោយ​ព្រះ​គម្ពីរ​ដោយ​ឥត​គិត​ថ្លៃ​ទៅ កាន់​មនុស្ស​គ្រប់ៗ​គ្នា​នៅ​ក្នុង​ពិភព​លោក។ ពេល​អ្នក​បរិច្ចាក​មក​កាន់​ YouVersion គឺ​លោក​អ្នក​កំពុង​ធ្វើ​បែប​នោះ​ហើយ។ យើង​កំពុង​តែ​រស់​នៅ​យ៉ាង​សប្បាយ​ក្នុង​កំឡុង​ពេល​ដែល​មនុស្ស​ផ្សេង​ទៀត​មាន​តែ​នៅ​ក្នុង​ការ​យល់​សប្ដិ &ndash; ពេល​ដែល​មនុស្ស​មាន​ទូរសព្ទ័ចល័ត​អាច​ចូល​ទៅ​កាន់​ព្រះ​គម្ពីរ​ ហើយ​ទទួល​នូវ​បទពិសោធន៍​ពី​រឿង​នៃ​សេចក្ដី​ស្រឡាញ់​របស់​ព្រះ​ជាម្ចាស់​សំរាប់​យើង។ ជាមួយ​នឹង​ការ​គាំ​ទ្រ​របស់​លោក​អ្នក, យើង​អាច​បន្ត​ក្នុង​ការ​ជួយ​ដល់​មនុស្ស​ជា​ច្រើន ក្នុង​ការ​ចំណាយ​ពេល​ក្នុង​ព្រះ​គម្ពីរ។"
+    amount: "ការ​បរិច្ចាក​ចំនួន"
+    option once: "ម្ដង"
+    option monthly: "ប្រចាំ​ខែ"
+    alert empty amount: "សូមបញ្ចូល​ចំនួន​បរិច្ចាក"
     name: "ឈ្មោះ​របស់​អ្នក"
     card number: "លេខ​ កាត​ក្រេឌីត"
     card exp date: "ថ្ងៃ​ផុត​កំណត់ (MMYY)"
