--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -13,6 +13,8 @@ mk:
       name: "Twitter"
     facebook:
       name: "Facebook"
+      errors:
+        expired access: "Вашиот токен за пристап преку Facebook истече. Ве молиме одјавете се од Facebook и повторно најавете се."
   api:
     users agree bool: "Мора да се согласите со Условите за користење за да се претплатите."
     users confirm password matches: "Лозинките не се совпаѓаат."
@@ -585,6 +587,10 @@ mk:
     headline: "Секому му е потребен Божјиот збор."
     subhead: "Помогни им на луѓето ширум светот да ја имаат Библијата во своите раце."
     copy: "Замисли да можеш секому во светот да дадеш Библија бесплатно. Кога даваш на YouVersion, го правиш токму тоа. Ние сме активни дури и кога другите само сонуваат за &ndash; кога секој со телефон има пристап до Библијата и се запознава со приказната за Божјата љубов кон нас. Со твојата поддршка, можеме да продолжиме да помагаме повеќе луѓе да поминуваат повеќе време со Писмото."
+    amount: "Сума на донацијата"
+    option once: "Еднократна"
+    option monthly: "Месечна"
+    alert empty amount: "Ве молиме внесете ја сумата на вашата донација."
     name: "Твоето име"
     card number: "Број на кредитна картичка"
     card exp date: "Трае до: (MMYY)"
