--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -13,6 +13,8 @@ vi:
       name: "Twitter"
     facebook:
       name: "Facebook"
+      errors:
+        expired access: "Thời gian kết nối Facebook của bạn đã kết thúc. Xin kết nối lại với Facebook."
   api:
     users agree bool: "Bạn cần đồng ý với điều khoản sử dụng để tạo tài khoản."
     users confirm password matches: "Mật khẩu mới không khớp."
