--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,9 @@ en:
     users username or password invalid:         "The username or password you supplied is invalid."
     users username required:                    "You must enter a username."
   meta:
+    kids_app:
+      title:                                    "The Bible App for Kids"
+      description:                              "..."
     100million:
       title:                                    "It Starts with 100 Million"
       description:                              "The Bible App has been installed almost 100 million times - an incredible milestone! But we are just getting started. Download the free Bible App today - and then share the app with your friends. Let’s make history together."
